# easy_log

./: CMakeLists.txt  README.md  reademe.md
src/: easy_log.h  log_client.cpp  log_client.h
src/logger/: logger.h  logger_test.cpp
